eks/infrastructure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: lab
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: 200,302,404
    alb.ingress.kubernetes.io/security-groups: sg-0bf9875af00971cc2
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/conditions.lab: |
      [{"field":"host-header","values":["lab.dataiesb.com"]}]
spec:
  ingressClassName: alb
  rules:
  - host: lab.dataiesb.com
    http:
      paths:
      - path: /kafka
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
      - path: /messages
        pathType: Prefix
        backend:
          service:
            name: data-lab-service
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: data-lab-service
            port:
              number: 80
